--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "io-dev-api-server",
   "version": "0.0.1",
-  "description": "Just a mock server to use with io-app https://io.italia.it/",
+  "description": "A mock server to help io-app development https://io.italia.it/",
   "main": "app.js",
+  "api_beckend_specs": "https://raw.githubusercontent.com/teamdigitale/italia-backend/v1.7.1/api_backend.yaml",
+  "api_public_specs": "https://raw.githubusercontent.com/teamdigitale/italia-backend/v1.7.1/api_public.yaml",
   "author": "Matteo Boschi",
   "license": "MIT",
   "private": false,
@@ -11,7 +13,7 @@
     "start": "npm-run-all build && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate:paths": "ts-node utils/paths_generator.ts",
-    "generate:models": "rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec https://raw.githubusercontent.com/teamdigitale/italia-backend/v1.7.1/api_backend.yaml --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec https://raw.githubusercontent.com/teamdigitale/italia-backend/v1.7.1/api_public.yaml --out-dir generated/definitions/backend",
+    "generate:models": "rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
     "generate:all": "npm-run-all generate:models generate:paths"
   },
   "dependencies": {
