--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "npm-run-all build && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate:paths": "ts-node utils/paths_generator.ts",
-    "generate:models": "rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
+    "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
     "generate:all": "npm-run-all generate:models generate:paths"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "@types/prettier": "^1.19.0",
     "@types/swagger-parser": "^7.0.1",
     "express": "^4.17.1",
+    "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.0.0",
     "morgan": "^1.9.1",
     "npm-run-all": "^4.1.5",
