--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "generate:all": "npm-run-all generate:models generate:paths"
   },
   "dependencies": {
+    "@types/body-parser": "^1.17.1",
     "@types/morgan": "^1.7.37",
     "@types/prettier": "^1.19.0",
     "@types/swagger-parser": "^7.0.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.0.0",
