--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "test": "jest",
+    "test-watch": "jest --watch",
     "build": "tsc",
-    "start": "npm-run-all build && node build/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm-run-all build && node build/src/start.js",
     "generate:paths": "ts-node utils/paths_generator.ts",
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
     "generate:all": "npm-run-all generate:models generate:paths"
@@ -34,7 +35,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.25",
     "@types/node": "^12.12.18",
+    "@types/supertest": "^2.0.8",
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
   }
