--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "supertest": "^4.0.2",
+    "ts-jest": "^24.2.0",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
   }
