--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "generate:paths": "ts-node src/utils/paths_generator.ts",
     "generate:content-definitions": "rimraf generated/definitions/content && mkdir -p generated/definitions/content && gen-api-models --api-spec https://raw.githubusercontent.com/teamdigitale/italia-services-metadata/master/definitions.yml --out-dir ./generated/definitions/content",
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
-    "generate:all": "npm-run-all generate:models generate:content-definitions generate:paths"
+    "generate:pagopa-api-definitions": "rimraf generated/definitions/pagopa && mkdir -p generated/definitions/pagopa && gen-api-models --api-spec https://wisp2.pagopa.gov.it/pp-restapi-CD/v2/api-docs --out-dir ./generated/definitions/pagopa --no-strict --request-types --response-decoders --default-error-type undefined",
+    "generate:all": "npm-run-all generate:models generate:content-definitions generate:paths generate:pagopa-api-definitions"
   },
   "dependencies": {
     "@types/body-parser": "^1.17.1",
