--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
     "generate:all": "npm-run-all generate:models generate:content-definitions generate:paths"
   },
+  "jest": {
+    "preset": "ts-jest"
+  },
   "dependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/morgan": "^1.7.37",
@@ -46,3 +49,4 @@
     "typescript": "^3.7.3"
   }
 }
+
