added dev script, refactor package.json

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "postinstall": "npm run generate:all",
+    "dev": "nodemon",
     "test": "jest",
     "test-watch": "jest --watch",
-    "build": "tsc",
     "lint": "tslint -p . -t verbose",
     "lint-autofix": "tslint -p . -t verbose --fix",
-    "start_server": "node build/src/start.js",
-    "start": "npm-run-all build start_server",
+    "start": "ts-node src/start.ts",
     "generate:paths": "ts-node src/utils/paths_generator.ts",
     "generate:content-definitions": "rimraf generated/definitions/content && mkdir -p generated/definitions/content && gen-api-models --api-spec https://raw.githubusercontent.com/teamdigitale/italia-services-metadata/master/definitions.yml --out-dir ./generated/definitions/content",
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend --no-strict --request-types && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
@@ -35,6 +35,7 @@
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.0.0",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
