--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/swagger-parser": "^7.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "italia-ts-commons": "^5.1.13",
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.0.0",
     "morgan": "^1.9.1",
