--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       - run:
           name: Testing
           command: yarn test
+      - run: "bash <(curl -s https://codecov.io/bash)"
 
 workflows:
   version: 2
