--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "collectCoverage": true
   },
   "dependencies": {
-    "sqlite3": "^4.0.0",
     "@types/body-parser": "^1.17.1",
+    "@types/ip": "^1.1.0",
     "@types/morgan": "^1.7.37",
     "@types/prettier": "^1.19.0",
     "@types/swagger-parser": "^7.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "ip": "^1.1.5",
     "italia-ts-commons": "^5.1.13",
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.0.0",
@@ -42,6 +43,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
+    "sqlite3": "^4.0.0",
     "swagger-parser": "^8.0.3",
     "ts-node": "^8.5.4"
   },
