--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/body-parser": "^1.17.1",
     "@types/ip": "^1.1.0",
     "@types/morgan": "^1.7.37",
+    "@types/node-localstorage": "^1.3.0",
     "@types/prettier": "^1.19.0",
     "@types/swagger-parser": "^7.0.1",
     "body-parser": "^1.19.0",
@@ -39,11 +40,11 @@
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.0.0",
     "morgan": "^1.9.1",
+    "node-localstorage": "^2.1.5",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
-    "sqlite3": "^4.0.0",
     "swagger-parser": "^8.0.3",
     "ts-node": "^8.5.4"
   },
