--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "swagger-parser": "^8.0.3",
-    "ts-node": "^8.5.4"
+    "ts-node": "8.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
@@ -53,6 +53,6 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.3"
+    "typescript": "^3.8.3"
   }
 }
