--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/prettier": "^1.19.0",
     "@types/swagger-parser": "^7.0.1",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "italia-ts-commons": "^5.1.13",
     "italia-tslint-rules": "^1.1.3",
