--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "lint": "tslint -p . -t verbose",
     "lint-autofix": "tslint -p . -t verbose --fix",
     "start": "ts-node src/start.ts",
-    "generate:paths": "ts-node src/utils/paths_generator.ts",
     "generate:content-definitions": "rimraf generated/definitions/content && mkdir -p generated/definitions/content && gen-api-models --api-spec $npm_package_content_specs --out-dir ./generated/definitions/content",
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
     "generate:pagopa-api-definitions": "rimraf generated/definitions/pagopa && mkdir -p generated/definitions/pagopa && gen-api-models --api-spec https://wisp2.pagopa.gov.it/pp-restapi-CD/v2/api-docs --out-dir ./generated/definitions/pagopa",
     "generate:bonus-vacanze-definitions": "rimraf generated/definitions/bonus_vacanze && mkdir -p generated/definitions/bonus_vacanze && gen-api-models --api-spec $npm_package_api_bonus_vacanze --out-dir ./generated/definitions/bonus_vacanze ",
-    "generate:all": "npm-run-all generate:models generate:content-definitions generate:paths generate:pagopa-api-definitions generate:bonus-vacanze-definitions"
+    "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api-definitions generate:bonus-vacanze-definitions"
   },
   "jest": {
     "preset": "ts-jest",
@@ -35,6 +34,7 @@
     "@types/prettier": "^1.19.0",
     "@types/swagger-parser": "^7.0.1",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "italia-ts-commons": "^5.1.13",
