enhance random generation in wallet data

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.17.1",
+    "@types/faker": "^5.1.0",
     "@types/morgan": "^1.7.37",
     "@types/prettier": "^1.19.0",
     "@types/swagger-parser": "^7.0.1",
@@ -38,6 +39,7 @@
     "chalk": "^4.1.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "italia-ts-commons": "^5.1.13",
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.0.0",
