--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/master/api_bonus.yaml",
   "api_bpd_citizen": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/citizen.json",
   "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/definitions.yml",
-  "api_bpd_pm_bancomat": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/pm/swagger_bancomat.yaml",
+  "api_pagopa_2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/pm/swagger_bancomat.yaml",
   "author": "Matteo Boschi",
   "license": "MIT",
   "private": false,
@@ -26,7 +26,7 @@
     "generate:pagopa-api-definitions": "rimraf generated/definitions/pagopa && mkdir -p generated/definitions/pagopa && gen-api-models --api-spec https://wisp2.pagopa.gov.it/pp-restapi-CD/v2/api-docs --out-dir ./generated/definitions/pagopa",
     "generate:bonus-vacanze-definitions": "rimraf generated/definitions/bonus_vacanze && mkdir -p generated/definitions/bonus_vacanze && gen-api-models --api-spec $npm_package_api_bonus_vacanze --out-dir ./generated/definitions/bonus_vacanze ",
     "generate:bpd-citizen": "rimraf generated/definitions/bpd/citizen && mkdir -p generated/definitions/bpd/citizen  && gen-api-models --api-spec $npm_package_api_bpd_citizen --out-dir ./generated/definitions/bpd/citizen --no-strict",
-    "generate:bpd-bancomat": "rimraf generated/definitions/bpd/pm/bancomat && mkdir -p generated/definitions/bpd/pm/bancomat  && gen-api-models --api-spec $npm_package_api_bpd_pm_bancomat --out-dir ./generated/definitions/bpd/pm/bancomat --no-strict",
+    "generate:bpd-bancomat": "rimraf generated/definitions/bpd/pm/bancomat && mkdir -p generated/definitions/bpd/pm/bancomat  && gen-api-models --api-spec $npm_package_api_pagopa_2 --out-dir ./generated/definitions/bpd/pm/bancomat --no-strict",
     "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api-definitions generate:bonus-vacanze-definitions generate:bpd-citizen generate:bpd-bancomat"
   },
   "jest": {
