refactoring support add bancomat

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.0.0/api_public.yaml",
   "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/master/api_bonus.yaml",
   "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/definitions.yml",
-  "api_pagopa": "https://acardste.vaservices.eu/pp-restapi-CD/v2/api-docs",
+  "api_pagopa": "https://wisp2.pagopa.gov.it/pp-restapi-CD/v2/api-docs",
+  "api_pagopa_bancomat": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/pm/swagger_bancomat.json",
   "api_bpd_citizen": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/citizen.json",
   "author": "Matteo Boschi",
   "license": "MIT",
@@ -24,9 +25,10 @@
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_beckend_specs --out-dir ./generated/definitions/backend && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
     "generate:content-definitions": "rimraf generated/definitions/content && mkdir -p generated/definitions/content && gen-api-models --api-spec $npm_package_content_specs --out-dir ./generated/definitions/content",
     "generate:pagopa-api-definitions": "rimraf generated/definitions/pagopa && mkdir -p generated/definitions/pagopa && gen-api-models --api-spec $npm_package_api_pagopa --out-dir ./generated/definitions/pagopa",
+    "generate:pagopa-api-bancomat-definitions": "rimraf generated/definitions/pagopa/bancomat && mkdir -p generated/definitions/pagopa/bancomat && gen-api-models --api-spec $npm_package_api_pagopa_bancomat --out-dir ./generated/definitions/pagopa/bancomat",
     "generate:bonus-vacanze-definitions": "rimraf generated/definitions/bonus_vacanze && mkdir -p generated/definitions/bonus_vacanze && gen-api-models --api-spec $npm_package_api_bonus_vacanze --out-dir ./generated/definitions/bonus_vacanze ",
     "generate:bpd-citizen": "rimraf generated/definitions/bpd/citizen && mkdir -p generated/definitions/bpd/citizen  && gen-api-models --api-spec $npm_package_api_bpd_citizen --out-dir ./generated/definitions/bpd/citizen --no-strict",
-    "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api-definitions generate:bonus-vacanze-definitions generate:bpd-citizen"
+    "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api-definitions generate:bonus-vacanze-definitions generate:bpd-citizen generate:pagopa-api-bancomat-definitions"
   },
   "jest": {
     "preset": "ts-jest",
@@ -41,6 +43,7 @@
     "@types/swagger-parser": "^7.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
+    "cli-ux": "^5.5.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
